--- a/app/views/tournaments/new.html.erb
+++ b/app/views/tournaments/new.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "トーナメント新規作成") %>
 <% provide(:class_text, 'tournament-new') %>
 <% provide(:button_text, "新規作成") %>
-<h1>新しいトーナメント</h1>
 
+<div class="title">新しいトーナメント</div>
 <div class="row">
-  <div class="col-lg-10 offset-lg-1">
+  <div class="col-md-8 offset-md-2">
     <%= render 'form' %>
   </div>
 </div>
