--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,85 +1,67 @@
 <% provide(:title, "トーナメント一覧") %>
 <% provide(:class_text, 'tournament-index') %>
 <% provide(:button_text, "一覧") %>
-<h1>トーナメント一覧</h1>
 
-<div class="col-lg-10 offset-lg-1">
+<div class="title">トーナメント一覧</div>
   <p>
     <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       検索オプション
     </button>
   </p>
-  <div class="collapse my-2" id="collapseExample">
-    <div class="card card-body bg-dark">
-      <%= form_with(url: tournaments_path, method: :get) do |fo| %>
-        <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
-        <div class="m-auto row justify-content-between align-items-center col-lg">
-          <div class="col-12">
-            <%= fo.label Tournament.human_attribute_name :name %>
-            <%= fo.text_field :name, placeholder: "空白にすると全て検索します", class: "form-control" %>
-          </div>
-          <div class="col-lg-6">
-            <%= fo.label Tournament.human_attribute_name :game_title %>
-            <%= fo.select :game_title, Tournament.game_titles.keys.to_a, {prompt: "全タイトル"}, class: "form-control" %>
-          </div>
-          <div class="col-lg-4 col-sm-8">
-            <%= fo.label Tournament.human_attribute_name :master %><br>
-            <%= select_tag :master, options_from_collection_for_select(User.all, :id, :name), include_blank: true, class: "form-control searchable" %>
-          </div>
-          <div class="col-lg-2 col-sm-4">
-            <%= fo.label Tournament.human_attribute_name :status %>
-            <%= fo.select :status, Tournament.statuses.keys.to_a, {prompt: "全て"}, class: "form-control" %>
-          </div>
-          <div class="col-md-5">
-            <%= fo.label "From"%>
-            <div class="input-group" data-target-input="nearest">
-              <%= fo.text_field :from, placeholder: "アイコンタッチで簡単入力", id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
-              <div class="input-group-append" data-target="#from_time_in" data-toggle="datetimepicker">
-                <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-              </div>
+  <div class="collapse bg-dark my-2" id="collapseExample">
+    <%= form_with(url: tournaments_path, method: :get) do |fo| %>
+      <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
+      <div class="p-auto mx-auto row justify-content-between align-items-center col-lg">
+        <div class="col-md-4">
+          <%= fo.label Tournament.human_attribute_name :name %>
+          <%= fo.text_field :name, placeholder: "空白で全て検索", class: "form-control" %>
+        </div>
+        <div class="col-md-8">
+          <%= fo.label Tournament.human_attribute_name :game_title %>
+          <%= fo.select :game_title, Tournament.game_titles.keys.to_a, {prompt: "全タイトル"}, class: "form-control" %>
+        </div>
+        <div class="col-lg-8 col-sm-8">
+          <%= fo.label Tournament.human_attribute_name :master %><br>
+          <%= select_tag :master, options_from_collection_for_select(User.all, :id, :name), include_blank: true, class: "form-control searchable" %>
+        </div>
+        <div class="col-lg-4 col-sm-4">
+          <%= fo.label Tournament.human_attribute_name :status %>
+          <%= fo.select :status, Tournament.statuses.keys.to_a, {prompt: "全て"}, class: "form-control" %>
+        </div>
+        <div class="col-md-5">
+          <%= fo.label "From"%>
+          <div class="input-group" data-target-input="nearest">
+            <%= fo.text_field :from, placeholder: "アイコンで入力", id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
+            <div class="input-group-append" data-target="#from_time_in" data-toggle="datetimepicker">
+              <div class="input-group-text"><i class="fa fa-calendar"></i></div>
             </div>
-          </div>
-          <div class="col-md-2 d-none d-md-block text-center">～</div>
-          <div class="col-md-5">
-            <%= fo.label "To" %>
-            <div class="input-group" data-target-input="nearest">
-              <%= fo.text_field :to, placeholder: "アイコンタッチで簡単入力", id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
-              <div class="input-group-append" data-target="#to_time_in" data-toggle="datetimepicker">
-                <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
           </div>
         </div>
-      <% end %>
-    </div>
+        <div class="col-md-2 d-none d-md-block text-center">～</div>
+        <div class="col-md-5">
+          <%= fo.label "To" %>
+          <div class="input-group" data-target-input="nearest">
+            <%= fo.text_field :to, placeholder: "アイコンで入力", id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
+            <div class="input-group-append" data-target="#to_time_in" data-toggle="datetimepicker">
+              <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <%= fo.submit "検索する", class: "btn btn-primary btn-block my-3" %>
+        </div>
+      </div>
+    <% end %>
   </div>
   
-  <div class="table-responsive-md">
-    <table class="table table-hover text-nowrap table-responsive-md" id="table-users">
-      <thead>
-        <tr>
-          <th colspan="4"><%= Tournament.human_attribute_name :name %></th>
-          <th colspan="2"><%= Tournament.human_attribute_name :game_title %></th>
-          <th colspan="4"><%= Tournament.human_attribute_name :master %></th>
-          <th colspan="1"><%= Tournament.human_attribute_name :start_time %></th>
-          <th colspan="1"><%= Tournament.human_attribute_name :status %></th>
-        </tr>
-      </thead>
-      
-      <tbody id="tournaments_search_result">
-        <%= render 'tournaments_search' %>
-      </tbody>
-     
-    </table>
+  <div class="table-responsive-md d-none d-md-block" id="tournaments_search_result">
+    <%= render 'tournaments_search' %>
   </div>
-</div>
-
+  <div class="d-block d-md-none" id="tournaments_search_md"><!-- md未満の画面では専用表示 -->
+    <%= render 'tournaments_search_md' %>
+  </div>
 <script>
   $('.searchable').select2();
-  
   $('.datepicker').datetimepicker({
     format: 'YYYY-MM-DD HH:mm:00'
   });
