--- a/app/views/tournaments/index.js.erb
+++ b/app/views/tournaments/index.js.erb
@@ -1,1 +1,2 @@
 $('#tournaments_search_result').html('<%= escape_javascript( render 'tournaments_search') %>')
+$('#tournaments_search_md').html('<%= escape_javascript( render 'tournaments_search_md') %>')
