--- a/app/views/users/_result_search.html.erb
+++ b/app/views/users/_result_search.html.erb
@@ -1,32 +1,47 @@
-<tr><td colspan="12"><%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %></td></tr>
-<% @tournaments.each do |tournament| %>
-  <% master = master_tournament(tournament) %>
-  <tr>
-    <td colspan="3"><%= link_to tournament.name, tournament, class: "text-reset font-weight-bold" %></td>
-    <td colspan="2" class="text-wrap text-break"><%= tournament.game_title %></td>
-    <td colspan="4">
-      <%= link_to image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;"), master %><br>
-      <% if logged_in? %>
-        <%= link_to "#{master.name}", master, class: "text-reset font-weight-bold" %>
-      <% else %>
-        <%= master.name %>
-      <% end %>
-    </td>
-    <td colspan="1"><%= l(tournament.start_time, format: :short) %></td>
-    <td colspan="1"><%= tournament.status %></td>
-    <td colspan="1">
-      <p class="show-ranking font-weight-bold font-italic">
-        <% if !(participant = Participant.where(tournament_id: tournament.id).find_by(user_id: @user.id)).nil? %>
-          <% if rank = participant.ranking %>
-            <%= rank.ordinalize %>
+<%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %>
+<table class="table table-hover text-nowrap table-responsive-md" id="table-users">
+  <thead>
+    <tr>
+      <th colspan="3"><%= Tournament.human_attribute_name :name %></th>
+      <th colspan="2"><%= Tournament.human_attribute_name :game_title %></th>
+      <th colspan="2"><%= Tournament.human_attribute_name :master %></th>
+      <th colspan="2"><%= Tournament.human_attribute_name :start_time %></th>
+      <th colspan="1"><%= Tournament.human_attribute_name :status %></th>
+      <th colspan="2" class="text-right"><%= "順位" %></th>
+    </tr>
+  </thead>
+  
+  <tbody>
+    <% @tournaments.each do |tournament| %>
+      <% master = master_tournament(tournament) %>
+      <tr>
+        <td colspan="3"><%= link_to tournament.name, tournament, class: "text-reset font-weight-bold" %></td>
+        <td colspan="2" class="text-wrap text-break"><%= tournament.game_title %></td>
+        <td colspan="2">
+          <%= link_to image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;"), master %><br>
+          <% if logged_in? %>
+            <%= link_to "#{master.name}", master, class: "text-reset font-weight-bold" %>
           <% else %>
-            <%= Participant.where(tournament_id: tournament.id).count.ordinalize %>
+            <%= master.name %>
           <% end %>
-        <% else %>
-          主催者
-        <% end %>
-      </p>
-    </td>
-  </tr>
-<% end %>
-<tr><td colspan="12"><%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %></td></tr>
+        </td>
+        <td colspan="2"><%= l(tournament.start_time, format: :short) %></td>
+        <td colspan="1"><%= tournament.status %></td>
+        <td colspan="2">
+          <p class="show-ranking font-weight-bold font-italic float-right">
+            <% if !(participant = Participant.where(tournament_id: tournament.id).find_by(user_id: @user.id)).nil? %>
+              <% if rank = participant.ranking %>
+                <%= rank.ordinalize %>
+              <% else %>
+                <%= Participant.where(tournament_id: tournament.id).count.ordinalize %>
+              <% end %>
+            <% else %>
+              Mas
+            <% end %>
+          </p>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %>
